<resources>
    <string name="app_name">Exploration GPA</string>
    <string name="button_next">Next</string>
    <string name="button_done">Done</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_discard">Discard</string>
    <string name="button_keep_editing">Keep Editing</string>
    <string name="button_calculate">Calculate</string>
    <string name="text_between_brackets">(%1$s)</string>
    <string name="number_between_brackets">(%1$d)</string>
    <string name="decimal_between_brackets">(%1$f)</string>
    <string name="number_with_hundred_percentage_sign">%1$s%%</string>
    <string name="year_zero">Primary year</string>
    <string name="year_one">First year</string>
    <string name="year_two">Second year</string>
    <string name="year_three">Third year</string>
    <string name="year_four">Senior year</string>
    <string name="title_activity_gpa">GPA</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_log_in">Log in</string>
    <string name="title_activity_settings_gpa_calculation">GPA Calculation</string>
    <string name="title_activity_setting_subject_info">Subject Info</string>
    <string name="title_activity_settings_subjects_order">Subject Order</string>
    <string name="title_activity_add_semester">Add Semester</string>
    <string name="title_activity_cumulative_gpa">Cumulative GPA</string>
    <string name="maximum_semester_selected">select 10 semesters maximum</string>
    <string name="minimum_semester_selected">select at least 2 semesters</string>
    <string name="semester_repeated">don\'t repeat semesters</string>
    <string name="dialog_message_delete_all_items_from_database">Delete all %1$s?</string>
    <string name="delete_all_semesters_data_successful">All semesters deleted</string>
    <string name="delete_all_semesters_data_failed">Error with deleting all semesters</string>
    <string name="delete_all_cumulative_data_successful">All cumulative items deleted</string>
    <string name="delete_all_cumulative_data_failed">Error with deleting all cumulative items</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Gpa Settings</string>
    <string name="settings_category_student_info">Student Info</string>
    <string name="settings_category_sync">Sync</string>
    <string name="settings_category_notes">Notes</string>
    <string name="settings_student_name_label">Your Name</string>
    <string name="settings_student_name_key" translatable="false">student_name</string>
    <string name="settings_student_name_default" translatable="false">Anon</string>
    <string name="settings_student_id_label">Your ID</string>
    <string name="settings_student_id_key" translatable="false">student_id</string>
    <string name="settings_student_id_default" translatable="false">00000</string>
    <string name="settings_subject_language_label">Subjects Language</string>
    <string name="settings_subject_language_key" translatable="false">subject_language</string>
    <string name="settings_subject_language_default" translatable="false">@string/settings_subject_language_english_value</string>
    <string name="settings_subject_language_english_label">English</string>
    <string name="settings_subject_language_english_value" translatable="false">english</string>
    <string name="settings_subject_language_arabic_label">Arabic</string>
    <string name="settings_subject_language_arabic_value" translatable="false">arabic</string>
    <string name="settings_calculation_name_label">GPA Calculate</string>
    <string name="settings_calculation_name_key" translatable="false">gpa_calculation</string>
    <string name="settings_subject_info_name_label">Subject Info</string>
    <string name="settings_subject_info_name_key" translatable="false">subject_info</string>
    <string name="settings_subjects_order_label">Subjects Order</string>
    <string name="settings_subjects_order_key" translatable="false">subjects_order</string>
    <string name="spinner_year_zero">Primary year</string>
    <string name="spinner_year_one">First year</string>
    <string name="spinner_year_two">Second year</string>
    <string name="spinner_year_three">Third year</string>
    <string name="spinner_year_four">Senior year</string>
    <string name="semester_number_between_brackets">Semester(%1$d)</string>
    <string name="explain_the_subject_order">
        You should study the subject(s) on the %1$s side before
        you start studying the subject on the %2$s side.
    </string>
    <string name="word_right" translatable="false">right</string>
    <string name="word_left" translatable="false">left</string>
    <string name="table_head_subject_degree">Subject Degree</string>
    <string name="table_head_gpa_letter">GPA Letter</string>
    <string name="table_head_gpa_points">GPA Points</string>
    <string name="table_value_subject_degree_1">100 &#8805; degree &#8805; 93</string>
    <string name="table_value_subject_degree_2">93 > degree &#8805; 88</string>
    <string name="table_value_subject_degree_3">88 > degree &#8805; 82</string>
    <string name="table_value_subject_degree_4">82 > degree &#8805; 78</string>
    <string name="table_value_subject_degree_5">78 > degree &#8805; 74</string>
    <string name="table_value_subject_degree_6">74 > degree &#8805; 70</string>
    <string name="table_value_subject_degree_7">70 > degree &#8805; 65</string>
    <string name="table_value_subject_degree_8">65 > degree &#8805; 60</string>
    <string name="table_value_subject_degree_9">60 > degree &#8805; 55</string>
    <string name="table_value_subject_degree_10">55 > degree &#8805; 50</string>
    <string name="table_value_gpa_letter_1">A</string>
    <string name="table_value_gpa_letter_2">A-</string>
    <string name="table_value_gpa_letter_3">B+</string>
    <string name="table_value_gpa_letter_4">B</string>
    <string name="table_value_gpa_letter_5">B-</string>
    <string name="table_value_gpa_letter_6">C+</string>
    <string name="table_value_gpa_letter_7">C</string>
    <string name="table_value_gpa_letter_8">C-</string>
    <string name="table_value_gpa_letter_9">D+</string>
    <string name="table_value_gpa_letter_10">D</string>
    <string name="table_value_gpa_points_1">4</string>
    <string name="table_value_gpa_points_2">3.7</string>
    <string name="table_value_gpa_points_3">3.3</string>
    <string name="table_value_gpa_points_4">3</string>
    <string name="table_value_gpa_points_5">2.7</string>
    <string name="table_value_gpa_points_6">2.3</string>
    <string name="table_value_gpa_points_7">2</string>
    <string name="table_value_gpa_points_8">1.7</string>
    <string name="table_value_gpa_points_9">1.3</string>
    <string name="table_value_gpa_points_10">1</string>
    <string name="term_first">first term</string>
    <string name="term_second">second term</string>
    <string name="insert_semester_inside_database_successful">Semester saved</string>
    <string name="insert_semester_inside_database_failed">Error with saving semester</string>
    <string name="update_semester_inside_database_successful">Semester updated</string>
    <string name="update_semester_inside_database_failed">Error with updating semester</string>
    <string name="delete_semester_from_database_successful">Semester deleted</string>
    <string name="delete_semester_from_database_failed">Error with deleting semester</string>
    <string name="degree_more_than_hundred">Check your degrees again</string>
    <string name="press_on_done_button">press DONE first</string>
    <string name="dialog_message_delete_semester">Delete this semester?</string>
    <string name="dialog_message_unsaved_changes">Discard your changes and exit?</string>
    <string name="activity_display_mode">Display Semester</string>
    <string name="activity_edit_mode">Edit Semester</string>
    <string name="error_message_on_editText_for_degree">can\'t be more than 100</string>
    <string name="gpa_statement_for_semester_item">Semester(%1$d) / GPA = %2$s</string>
    <string name="gpa_statement_for_cumulative_item">THE CUMULATIVE GPA = %1$s</string>
    <string name="display_more_details">(click for more details)</string>
    <string name="display_less_details">(click for less details)</string>
    <string name="term_word_in_year_item">Term(%1$d) / S.%2$d</string>
    <string name="term_gpa">Term GPA = %1$s</string>
    <string name="insert_cumulative_inside_database_successful">Cumulative gpa saved</string>
    <string name="insert_cumulative_inside_database_failed">Error with saving the cumulative gpa</string>
    <string name="delete_cumulative_from_database_successful">Cumulative item deleted</string>
    <string name="delete_cumulative_from_database_failed">Error with deleting cumulative item</string>
    <string name="dialog_message_delete_cumulative">Delete this cumulative item?</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="subject_hint_degree">000</string>
    <string name="year">Year</string>
    <string name="term">Term</string>
    <string name="hint_for_name">Your Name (English)</string>
    <string name="hint_for_id">00000</string>
    <string name="semester_first_radio">First</string>
    <string name="semester_second_radio">Second</string>
    <string name="semester">Semester</string>
    <string name="subject_hundred_degree">/&#160;100</string>
    <string name="subject_hundred_degree_for_arabic_language" translatable="false">\\&#160;100</string>
    <string name="semester_total_gpa">Semester Total Gpa =</string>
    <string name="empty_view_title_text_for_image">It\'s empty here…</string>
    <string name="empty_view_title_text_for_add_semester">Get started by adding a semester</string>
    <string name="cumulative_gpa">Your Cumulative GPA</string>
    <string name="subject_name">Subject Name</string>
    <string name="subject_hours">Subject\nHours</string>
    <string name="subject_success_degree">Success\nDegree</string>
    <string name="hint_number">Hint</string>
    <string name="hint_number_1">Hint (1)</string>
    <string name="hint_number_2">Hint (2)</string>
    <string name="hint_number_3">Hint (3)</string>
    <string name="gpa_calculation_hint_1">
        The subjects with degree less than the success degree are not included in the calculation
        (semester gpa or cumulative gpa).
    </string>
    <string name="gpa_calculation_hint_2">
        The subject gpa letter is based on your degree in the subject as shown in the table
    </string>
    <string name="gpa_calculation_hint_3_part_1">
        The total (semester or cumulative) gpa is calculated by the following steps:
        \n\n1- Determine each subject points according to the student\'s degree in the subject as shown
        in the table
    </string>
    <string name="gpa_calculation_hint_3_part_2">
        2- Multiply the subject points from (Step.1) with the subject hours.
        \n\n3- Sum the results from multiplying each subject points with it hours.
        \n\n4- Sum all subject hours together.
        \n\n5- Dividing the result of (Step.3) by the result of (Step.4).
        \n\n6- From (Step.5) you will get a decimal number, that\'s the total gpa
        (round it to two decimal numbers).
    </string>
    <string name="semester_1_subject_1_english">Mathematics I</string>
    <string name="semester_1_subject_2_english">Mechanics I</string>
    <string name="action_calculate_total_gpa">Calculate Total GPA</string>
    <string name="action_delete_all_semesters">Delete All Semesters</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
</resources>