<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddSemesterActivity || .CumulativeGpaActivity">

    <!-- edit icon -->
    <item
        android:id="@+id/menu_database_action_edit"
        android:title="@string/action_edit"
        android:icon="@drawable/edit_icon"
        android:visible="false"
        app:showAsAction="always"
        tools:visible="true"/>

    <!-- delete icon -->
    <item
        android:id="@+id/menu_database_action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/delete_icon"
        android:visible="false"
        app:showAsAction="always"
        tools:visible="true" />

    <!-- save icon -->
    <item
        android:id="@+id/menu_database_action_save"
        android:title="@string/action_save"
        android:icon="@drawable/save_icon"
        android:visible="false"
        app:showAsAction="always"
        tools:visible="true" />

</menu>