<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".InfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="start|center"
                android:text="@string/name"
                android:textSize="16sp" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="start|center"
                android:text="@string/id"
                android:textSize="16sp" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="start|center"
                android:text="@string/year"
                android:textSize="16sp" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="start|center"
                android:text="@string/term"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/activity_info_student_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/hint_for_name"
                android:inputType="textCapWords"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/activity_info_student_id"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/hint_for_id"
                android:inputType="number"
                android:maxLength="5" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/activity_info_spinner_year"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:gravity="start"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>


            <RadioGroup
                android:id="@+id/activity_info_radio_buttons"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/activity_info_radio_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/semester_first_radio"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/activity_info_radio_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/semester_second_radio"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/activity_info_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16sp"
        android:padding="16dp"
        android:enabled="true"
        android:text="@string/next_button"
        android:textColor="#F0514B"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>