<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_semester_item_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.SubjectInfoActivity" >


    <!-- the semester number -->
    <TextView
        android:id="@+id/settings_semester_item_semester_number"
        style="@style/settings_semester_word_with_number_in_brackets"
        tools:text="Semester (7)" />


    <!-- linear contain the heads name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp" >


        <!-- column heads for the subject name -->
        <TextView
            style="@style/subject_info_column_heads"
            android:text="@string/subject_name"
            android:layout_weight="4"
            android:gravity="center"
            android:textSize="16sp" />


        <!-- horizontal line to separate between the heads -->
        <View
            style="@style/Divider_horizontal"
            android:layout_width="3dp" />


        <!-- column heads for the subject hours -->
        <TextView
            style="@style/subject_info_column_heads"
            android:text="@string/subject_hours"
            android:layout_weight="1"
            android:textSize="14sp"
            android:gravity="center" />


        <!-- horizontal line to separate between the heads -->
        <View
            style="@style/Divider_horizontal"
            android:layout_width="3dp" />


        <!-- column heads for the subject success degree -->
        <TextView
            style="@style/subject_info_column_heads"
            android:text="@string/subject_success_degree"
            android:layout_weight="1"
            android:textSize="14sp"
            android:gravity="center" />


    </LinearLayout>


    <!-- vertical line to separate between the heads column and the listView below -->
    <View
        style="@style/Divider_vertical"
        android:layout_height="3dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp" />


    <!-- list contain the subjects details in the semester -->
    <com.example.android.explorationgpa.ListViewNoScroll
        android:id="@+id/settings_semester_item_ListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />


</LinearLayout>