<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".AddSemesterActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <View
            android:id="@+id/add_semester_top_shadow"
            android:layout_width="match_parent"
            android:layout_height="96dp" />

        <View style="@style/Divider_vertical" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/top_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <View style="@style/Divider_vertical" />


                    <LinearLayout
                        android:id="@+id/gpa_editor_outer_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16sp"
                        android:layout_marginRight="16sp"
                        android:orientation="vertical" />


                    <com.example.android.explorationgpa.ListViewNoScroll
                        android:id="@+id/gpa_editor_level_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:orientation="vertical" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="48dp" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/add_semester_button_done"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="#F0514B"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        tools:text="DONE" />

    <LinearLayout
        android:id="@+id/add_semester_student_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <TextView
                style="@style/GpaStudentInfo"
                android:text="@string/name" />

            <TextView
                style="@style/GpaStudentInfo"
                android:text="@string/id" />

            <TextView
                style="@style/GpaStudentInfo"
                android:text="@string/semester" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_semester_name"
                style="@style/GpaStudentInfo"
                tools:text="Mahmoud Tharwat Mohamed" />

            <TextView
                android:id="@+id/add_semester_id"
                style="@style/GpaStudentInfo"
                tools:text="17136" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_semester_number_of_semester"
                    style="@style/GpaStudentInfo"
                    tools:text="3" />

                <TextView
                    android:id="@+id/add_semester_button_edit"
                    style="@style/GpaStudentInfo"
                    android:layout_width="match_parent"
                    android:gravity="end"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/button_back_to_edit"
                    android:textColor="#3700B3" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
